--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   db:
     image: mysql:5.6
-    container_name: starwarslibrary_database
+    container_name: starwars_database
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
@@ -12,10 +12,10 @@ services:
     volumes:
       - ../db-dump:/docker-entrypoint-initdb.d
   phpmyadmin:
-    container_name: starwarslibrary_myadmin
+    container_name: starwars_myadmin
     image: phpmyadmin/phpmyadmin
     environment:
-      - PMA_HOST=starwarslibrary_database
+      - PMA_HOST=starwars_database
       - PMA_USER=root
       - PMA_PASSWORD=root
     ports:
@@ -26,10 +26,10 @@ services:
     tty: true
     stdin_open: true
     build: ./
-    container_name: starwarslibrary_web
+    container_name: starwars_web
     privileged: true
     volumes:
-      - ../:/var/www/starwarslibrary
+      - ../:/var/www/starwars
     ports:
       - "3000:3000"
       - "80:80"
